--- a/src/Thumbtack/OfflinerBundle/Resources/views/Default/todo.html.twig
+++ b/src/Thumbtack/OfflinerBundle/Resources/views/Default/todo.html.twig
@@ -2,14 +2,19 @@
 
 {% block global_stat %}
     <div class="stats stats-theme-light pull-right social">
-        <span style="display: inline-block;"><span class="stats-label"></span> <span class="stats-count" style="font-size: 100%">FOLLOW US:</span></span>
-        <span class="stats-item"><span class="stats-label">Twitter</span> <span class="stats-count"><span class="icon icon-wf "></span></span></span>
-        <span class="stats-item"><span class="stats-label">Google</span> <span class="stats-count"><span class="icon icon-wf"></span></span></span>
-        <a href="https://github.com/aremnev/offliner"><span class="stats-item"><span class="stats-label">Github</span> <span class="stats-count"><span class="icon icon-wf ">&#62208;</span></span></span></a>
+        <span style="display: inline-block;"><span class="stats-label"></span> <span class="stats-count"
+                                                                                     style="font-size: 100%">FOLLOW US:</span></span>
+        <span class="stats-item"><span class="stats-label">Twitter</span> <span class="stats-count"><span
+                        class="icon icon-wf "></span></span></span>
+        <span class="stats-item"><span class="stats-label">Google</span> <span class="stats-count"><span
+                        class="icon icon-wf"></span></span></span>
+        <a href="https://github.com/aremnev/offliner"><span class="stats-item"><span
+                        class="stats-label">Github</span> <span class="stats-count"><span
+                            class="icon icon-wf ">&#62208;</span></span></span></a>
     </div>
 {% endblock %}
 {% block data %}
     {% verbatim %}
-    <div  class="loading"><p>In w<span class="rotateO"></span>rk</p></div>
+    <div class="loading"><p>In w<span class="rotateO"></span>rk</p></div>
     {% endverbatim %}
 {% endblock %}
